## Process this file with automake to produce Makefile.in

gladepixmapdir = @GLADE_PIXMAP_DIR@

P16DIR = hicolor/16x16/actions
P22DIR = hicolor/22x22/actions

gladepixmap16dir = @GLADE_PIXMAP_DIR@/$(P16DIR)
gladepixmap22dir = @GLADE_PIXMAP_DIR@/$(P22DIR)


PIXMAPS_16 = \
    $(P16DIR)/widget-gtkextra-gtkbordercombo.png \
    $(P16DIR)/widget-gtkextra-gtkcharselection.png \
    $(P16DIR)/widget-gtkextra-gtkcheckitem.png \
    $(P16DIR)/widget-gtkextra-gtkcolorcombo.png \
    $(P16DIR)/widget-gtkextra-gtkcombobutton.png \
    $(P16DIR)/widget-gtkextra-gtkfilelist.png \
    $(P16DIR)/widget-gtkextra-gtkfontcombo.png \
    $(P16DIR)/widget-gtkextra-gtkiconlist.png \
    $(P16DIR)/widget-gtkextra-gtkitementry.png \
    $(P16DIR)/widget-gtkextra-gtkplotbubble.png \
    $(P16DIR)/widget-gtkextra-gtkplotcandle.png \
    $(P16DIR)/widget-gtkextra-gtkplotcanvas.png \
    $(P16DIR)/widget-gtkextra-gtkplotpolar.png \
    $(P16DIR)/widget-gtkextra-gtksheet.png \
    $(P16DIR)/widget-gtkextra-gtksheetcolumn.png \
    $(P16DIR)/widget-gtkextra-gtktogglecombo.png

PIXMAPS_22 = \
    $(P22DIR)/widget-gtkextra-gtkbordercombo.png \
    $(P22DIR)/widget-gtkextra-gtkcharselection.png \
    $(P22DIR)/widget-gtkextra-gtkcheckitem.png \
    $(P22DIR)/widget-gtkextra-gtkcolorcombo.png \
    $(P22DIR)/widget-gtkextra-gtkcombobutton.png \
    $(P22DIR)/widget-gtkextra-gtkfilelist.png \
    $(P22DIR)/widget-gtkextra-gtkfontcombo.png \
    $(P22DIR)/widget-gtkextra-gtkiconlist.png \
    $(P22DIR)/widget-gtkextra-gtkitementry.png \
    $(P22DIR)/widget-gtkextra-gtkplot.png \
    $(P22DIR)/widget-gtkextra-gtkplotaxis.png \
    $(P22DIR)/widget-gtkextra-gtkplotbox.png \
    $(P22DIR)/widget-gtkextra-gtkplotbubble.png \
    $(P22DIR)/widget-gtkextra-gtkplotcandle.png \
    $(P22DIR)/widget-gtkextra-gtkplotcanvas.png \
    $(P22DIR)/widget-gtkextra-gtkplotflux.png \
    $(P22DIR)/widget-gtkextra-gtkplotpixmap.png \
    $(P22DIR)/widget-gtkextra-gtkplotpolar.png \
    $(P22DIR)/widget-gtkextra-gtksheet.png \
    $(P22DIR)/widget-gtkextra-gtksheetcolumn.png \
    $(P22DIR)/widget-gtkextra-gtktogglecombo.png

gladepixmap16_DATA = $(PIXMAPS_16)
gladepixmap22_DATA = $(PIXMAPS_22)

EXTRA_DIST = $(PIXMAPS_16) $(PIXMAPS_22)
